fix: description overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -191,6 +191,7 @@
         vertical-align: middle;
       }
       text-align: left;
+      overflow-wrap: anywhere;
     }
   }
   .ability-damage {
